Allow perpetual cron schedules (#256)
# Goals

Allow cron schedules to keep running when they run out of deals

# Implementation

- add attribute to the model
- add ability to set attribute on CreateSchedule 
- when jobs run out of deals, if they are cron and set to perpetual,
they don't get marked complete
