# docs/swagger/swagger.yaml
@@ -5068,6 +5068,8 @@ definitions:
         type: string
       scheduleCron:
         type: string
+      scheduleCronPerpetual:
+        type: boolean
       scheduleDealNumber:
         type: integer
       scheduleDealSize:
@@ -5237,6 +5239,9 @@ definitions:
       scheduleCron:
         description: Schedule cron patter
         type: string
+      scheduleCronPerpetual:
+        description: Whether a cron schedule should run in definitely
+        type: boolean
       scheduleDealNumber:
         description: Number of deals per scheduled time
         type: integer
